--- a/src/template.html
+++ b/src/template.html
@@ -21,7 +21,152 @@
 
       <div class="content">
         <div class="content-top"></div>
-        <div class="content-bottom"></div>
+        <div class="content-bottom">
+          <!-- <ul>
+            <li>
+              <h2>Appetizers (Antipasti)</h2>
+              <ol>
+                <li>
+                  Bruschetta al Pomodoro – Toasted bread topped with fresh
+                  tomatoes, garlic, basil, and extra virgin olive oil.
+                </li>
+                <li>
+                  Caprese Salad – Fresh mozzarella, ripe tomatoes, basil, olive
+                  oil, and balsamic glaze.
+                </li>
+                <li>
+                  Arancini – Crispy rice balls stuffed with mozzarella and
+                  served with marinara sauce.
+                </li>
+                <li>
+                  Carpaccio di Manzo – Thinly sliced raw beef, arugula, capers,
+                  Parmesan, and olive oil.
+                </li>
+                <li>
+                  Prosciutto e Melone – Thinly sliced prosciutto wrapped around
+                  sweet melon slices.
+                </li>
+              </ol>
+            </li>
+            <li>
+              <h2>Pasta Dishes (Primi Piatti)</h2>
+              <ol>
+                <li>
+                  Spaghetti Bolognese – Traditional Italian beef and tomato
+                  sauce with a hint of red wine.
+                </li>
+                <li>
+                  Fettuccine Alfredo – Fresh fettuccine pasta with a creamy
+                  Parmesan sauce.
+                </li>
+                <li>
+                  Penne Arrabbiata – Penne pasta in a spicy tomato sauce with
+                  garlic, chili, and parsley.
+                </li>
+                <li>
+                  Pasta Primavera – A light pasta with sautéed seasonal
+                  vegetables, garlic, and olive oil.
+                </li>
+                <li>
+                  Lasagna alla Bolognese – Layers of pasta, beef ragù, béchamel,
+                  and Parmesan.
+                </li>
+              </ol>
+            </li>
+            <li>
+              <h2>Main Courses (Secondi Piatti)</h2>
+              <ol>
+                <li>
+                  Pollo Parmigiana – Breaded chicken cutlet topped with marinara
+                  sauce and melted mozzarella, served with spaghetti.
+                </li>
+                <li>
+                  Vitello Milanese – Breaded veal cutlet served with a lemon
+                  wedge and a side of sautéed spinach.
+                </li>
+                <li>
+                  Branzino al Forno – Whole roasted sea bass with lemon, herbs,
+                  and olive oil.
+                </li>
+                <li>
+                  Osso Buco – Slow-braised veal shank in a rich tomato sauce
+                  with white wine and vegetables, served with risotto.
+                </li>
+                <li>
+                  Tagliata di Manzo – Grilled ribeye steak sliced and served
+                  with arugula, Parmesan, and balsamic glaze.
+                </li>
+              </ol>
+            </li>
+            <li>
+              <h2>Side Dishes (Contorni)</h2>
+              <ol>
+                <li>
+                  Patate al Rosmarino – Roasted potatoes with rosemary and
+                  garlic.
+                </li>
+                <li>
+                  Spinaci Sautéed – Sautéed spinach with garlic and olive oil.
+                </li>
+                <li>
+                  Caponata Siciliana – Sweet and sour eggplant stew with olives,
+                  capers, and tomatoes.
+                </li>
+                <li>
+                  Fagiolini Aglio e Olio – Green beans sautéed in garlic and
+                  olive oil.
+                </li>
+                <li>
+                  Insalata Mista – Mixed green salad with tomatoes, cucumbers,
+                  and balsamic dressing.
+                </li>
+              </ol>
+            </li>
+            <li>
+              <h2>Desserts (Dolci)</h2>
+              <ol>
+                <li>
+                  Tiramisu – Classic Italian dessert made with espresso-soaked
+                  ladyfingers, mascarpone cheese, and cocoa.
+                </li>
+                <li>
+                  Panna Cotta – Creamy vanilla pudding topped with a berry
+                  compote.
+                </li>
+                <li>
+                  Cannoli Siciliani – Crisp pastry tubes filled with sweet
+                  ricotta cheese and chocolate chips.
+                </li>
+                <li>
+                  Zabaglione – Italian custard made with Marsala wine, served
+                  with fresh berries.
+                </li>
+                <li>
+                  Gelato – Authentic Italian ice cream in a variety of flavors
+                  (vanilla, chocolate, pistachio, hazelnut).
+                </li>
+              </ol>
+            </li>
+            <li>
+              <h2>Beverages</h2>
+              <ol>
+                <li>
+                  Italian Wines – A selection of red and white wines from
+                  Tuscany, Sicily, and Piedmont.
+                </li>
+                <li>Espresso – Strong, aromatic Italian coffee.</li>
+                <li>
+                  Cappuccino – Espresso topped with steamed milk and foam.
+                </li>
+                <li>Acqua Minerale – Still or sparkling mineral water.</li>
+                <li>
+                  Limoncello – Traditional Italian lemon liqueur, served
+                  chilled.
+                </li>
+              </ol>
+            </li>
+          </ul> -->
+        </div>
       </div>
       <footer>&copy; 2024 Santino Italian</footer>
     </div>
